--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Xereon</string>
 
-    <string name="total_price_incl_tax"><font color="#252525"><b>Gesamt</b></font> <font color="#969696"><small>incl. MwSt.</small></font></string>
+    <string name="total_price_incl_tax"><font color="#252525"><b>Gesamtpreis</b></font> <font color="#969696"><small>incl. MwSt.</small></font></string>
 
     <array name="day_of_week_short">
         <item>Mo</item>
